[package]
name = "lspsd"
version = "0.1.5"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.99"
argh = "0.1.13"
axum = "0.8.1"
hex = { package = "hex-conservative", version = "0.3.0", default-features = false }
ldk-node = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
minreq = { version = "2.14.0", default-features = false, features = [
    "https", "json-using-serde"
] }
log = "0.4.27"
tempfile = "3.21.0"
which = "8.0.0"
electrsd = { version= "0.27.3", features = ["bitcoind_25_0", "esplora_a33e97e1", "legacy"] }
cdk = { version = "0.12.0", default-features = false, features = ["wallet"] }
cdk-ldk-node = { version = "0.12.0" }
cdk-sqlite = { version = "0.12.0" }
cdk-axum = { version = "0.12.0" }
rand = { version = "0.8.5" }


[build-dependencies]
bitcoin_hashes = { version = "0.16" }
flate2 = { version = "1.0" }
zip = { version = "0.6", default-features = false, features = [
  "bzip2",
  "deflate",
] }
minreq = { version = "2.9.1", default-features = false, features = [
    "https", "json-using-serde"
] }
anyhow = "1.0.66"
